# captain

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.release  Makefile  README.md  build.py  build.sh  mkosi.conf  mkosi.finalize  mkosi.postinst  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  config.env  mergify.yml  settings.yaml
.github/workflows/: ci.yml  release.yml
captain/: artifacts.py  buildah.py  cli.py  config.py  crane.py  docker.py  iso.py  kernel.py  oci.py  qemu.py  skopeo.py  tools.py  util.py
captain/cli/: __init__.py  _commands.py  _main.py  _parser.py  _release.py  _stages.py
captain/oci/: __init__.py  _build.py  _common.py  _publish.py  _pull.py
config/: defconfig.amd64  defconfig.arm64
docs/: kernel-build.md
docs/design-decisions/: oci-tooling-buildah-skopeo.md
kernel.configs/: 6.18.y.amd64  6.19.y.arm64
mkosi.extra/etc/: hostname  motd  rsyslog.conf
mkosi.extra/etc/cni/net.d/: 10-bridge.conflist
mkosi.extra/etc/modules-load.d/: ipmi.conf
mkosi.extra/etc/nerdctl/: nerdctl.toml
mkosi.extra/etc/rsyslog.d/: 50-remote.conf
mkosi.extra/etc/systemd/: timesyncd.conf
mkosi.extra/etc/systemd/network/: 80-dhcp.network
mkosi.extra/etc/systemd/resolved.conf.d/: no-stub.conf
mkosi.extra/etc/systemd/system/: captainos-static-network.service  rsyslog-hostname-reload.path  rsyslog-hostname-reload.service  rsyslog.service  tink-agent.service
scripts/: build-iso.py  build-kernel.sh  download-tools.sh
